# isoblue

./: .gitignore  .markdownlint.json  CONTRIBUTING.md  LICENSE  LTE_Modem.sch-bak  README.md  USB2CAN_IMP.sch-bak  USB2CAN_TRA.sch  USB2CAN_TRA.sch-bak  USB_HEADERS.sch  USB_HUB.sch-bak  isoshield-cache.lib  isoshield.sch  isoshield.sch-bak  lattepanda.sch-bak  notes.md
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: build-and-push-services.yml  integration-tests.yml  main.yml  validate-codeowners.yml
Deployment/: deploy.yml
Documentation/: Avena Architecture.md
Hardware/: USB2CAN_IMP.sch-bak  USB2CAN_TRA.sch-bak  USB_HEADERS.sch  USB_HEADERS.sch-bak  USB_HUB.sch  fp-info-cache  isoshield-cache.lib  isoshield.kicad_pcb-bak  isoshield.net  isoshield.sch
Hardware/avenashield/: USB2CAN_IMP.sch-bak  USB2CAN_TRA.sch  USB_HEADERS.sch  avenashield-cache.lib  avenashield.kicad_pcb  avenashield.net  avenashield.pro  fp-lib-table
Software/gps/: gps_log.py
Software/heartbeat/: build.sh  heartbeat.c
Software/opt/: isoblue.cfg
ansible/: avena.yml  oats-fleet.yml
ansible/avena/: README.md  galaxy.yml
docs/: README.md
docs/ansible/: deploy.md
docs/concepts/: ssh-ca.md
hardware/avenashield/: LTE_Modem.sch  README.md  USB2CAN_IMP.sch-bak  USB2CAN_TRA.sch  USB2CAN_TRA.sch-bak  USB_HEADERS.sch  USB_HUB.sch  avenashield  avenashield-cache.lib  avenashield.kicad_pcb  avenashield.kicad_pcb-bak  avenashield.net  avenashield.pro  avenashield.sch  avenashield.sch-bak  fp-info-cache  fp-lib-table  lattepanda.sch  lattepanda.sch-bak  sym-lib-table
hardware/lattepanda-enclosure/: mountingplate.step  readme.txt
hardware/powershield/: lattepanda.sch  power_controller.sch  power_conversion.sch  powershield-cache.lib  powershield.sch  sym-lib-table
installers/lattepanda-alpha/: preseed.cfg
installers/lattepanda-alpha-delta/: preseed.cfg
installers/lattepanda-delta/: preseed.cfg
installers/toradex-apalis/: install-avena  make-install-disk.sh  preseed.cfg  update-device-tree
legacy/services/cand/: Cargo.toml
misc/test/: find-online.sh  gpiosetup.sh
services/: container-maintainer.py  docker-compose.yml
services/CapstonePython/: PythonFinal.py  requirements.txt
services/avena_fm/: Dockerfile  requirements.txt
services/avena_video/: Dockerfile  avena_video.py  requirements.txt
services/can-watchdog/: Dockerfile  can-watchdog.py  docker-compose.yml
services/can_logger/: Dockerfile  can_logger.py  docker-compose-example.yml  docker-compose.yml  docker-compose.yml.example  healthcheck.py
services/can_watchdog/: Dockerfile  can_watchdog.py  docker-compose-example.yml  docker-compose.yml  requirements.txt
services/cand/: Dockerfile
services/cell-logger/: Dockerfile  cell-logger  docker-compose.yml  requirements.txt
services/docker/: .env  (+1 more)
services/gps-exporter/: Cargo.toml  Dockerfile  crontab  docker-compose.yml  entrypoint.sh  run-gps-exporter  run-gps-exporter.sh
services/gps-exporter/src/: main.rs
services/gps2tsdb/: Cargo.toml  Dockerfile  docker-compose-example.yml  docker-compose-test.yml  docker-compose.yml  gps.py  gps2tsdb.py  healthcheck.py  manage_db.py  requirements.txt
services/gps2tsdb/src/: main.rs
services/gps2tsdb/test/gps_replay/: docker-compose-example.yml  gps_replay.py  requirements.txt  setup_dbus.sh
services/gps2tsdb/test/gps_verify/: Dockerfile  docker-compose-example.yml  gps_verify.py  requirements.txt
services/gps2tsdb/test/schema/: gps.sql
services/j1939d/: Cargo.toml  Dockerfile
services/j1939d/src/: j1939.rs  main.rs
services/j1939d/src/j1939/: control_messages.rs  message.rs  socket.rs
software/: docker-compose.yml  oada_variables.env
software/kafka-can-log/: Makefile.am  configure.ac
software/kafka-can-log/kafka_can_log/: Makefile.am  isobus.h
(+283 files in other folders)
