[package]
name = "gps2tsdb"
version = "0.1.0"
authors = ["Andrew Balmos <abalmos@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gpsd_proto = "0.6.0"
tokio = { version = "0.2.18", features = ["full"] }
sqlx = { version = "0.3.4", default-features = false, features = ["runtime-tokio", "macros", "postgres", "time", "chrono"] }
chrono = "0.4.11"
openssl = { version = "0.10.29", features = [ "vendored" ] }

[profile.release]
lto = true
codegen-units = 1
panic = 'abort'
