[package]
name = "cand"
version = "0.1.0"
authors = ["Andrew Balmos <abalmos@purdue.edu>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
clap = "2.33.3"
derive_more = { version = "0.99.11", features = [ "display", "from" ] }
hex = "0.4.2"
nats = "0.9.4"
serde = { version = "1.0.123", features = [ "derive" ] }
serde_json = "1.0.62"
socketcan = { git = "https://github.com/fpagliughi/socketcan-rs.git", branch = "develop" }
